--- a/src/app/demo/components/dashboard/dashboard.component.html
+++ b/src/app/demo/components/dashboard/dashboard.component.html
@@ -103,7 +103,7 @@
 <!--                    <i class="pi pi-dollar text-6xl mb-5"></i>-->
                 </div>
             </div>
-            <div class="text-900 font-medium text-xl">Mail pro</div>
+            <div class="text-900 font-medium text-xl">Courriel professionnel</div>
             </a>
         </div>
     </div>
@@ -125,11 +125,12 @@
             <a href="{{url5}}" target="_blank">
                 <div class="col justify-content-between">
                     <div class="flex align-items-center justify-content-center border-round">
-                        <i class="pi pi-money-bill text-6xl mb-5"></i>
+<!--                        <i class="pi pi-money-bill text-6xl mb-5"></i>-->
+                        <i class="pi pi-users text-6xl mb-5"></i>
                         <!--                    <i class="pi pi-dollar text-6xl mb-5"></i>-->
                     </div>
                 </div>
-                <div class="text-900 font-medium text-xl">Budget</div>
+                <div class="text-900 font-medium text-xl">Espace Personnel</div>
             </a>
         </div>
     </div>
@@ -141,7 +142,7 @@
                         <i class="pi pi-chart-line text-6xl mb-5"></i>
                     </div>
                 </div>
-                <div class="text-900 font-medium text-xl">Congé</div>
+                <div class="text-900 font-medium text-xl">Mot de passe Mail pro</div>
             </a>
         </div>
     </div>
