--- a/src/app/layout/app.footer.component.html
+++ b/src/app/layout/app.footer.component.html
@@ -1,5 +1,7 @@
 <div class="layout-footer">
-    <img src="assets/layout/images/{{layoutService.config().colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg" alt="Logo" height="20" class="mr-2"/>
+    <img src="assets/layout/images/pf2e.png" alt="logo" height="22" class="mr-2">
+ <!--   <img src="assets/layout/images/{{layoutService.config().colorScheme === 'light' ?
+    'logo-dark' : 'logo-white'}}.svg" alt="Logo" height="20" class="mr-2"/>-->
     Par
-    <span class="font-medium ml-2">Mouhamed DIALLO 2024</span>
+    <span class="font-medium ml-2">PF2E 2025</span>
 </div>
