--- a/src/app/layout/app.topbar.component.html
+++ b/src/app/layout/app.topbar.component.html
@@ -7,9 +7,13 @@
         color: white;
         text-align: left;
         position: absolute;
-        left: 0px;
+        left: 0;
         justify-content: left;
 
+    }
+    span{
+        width:250px;
+        min-width:250px;
     }
     .pf2e{
         text-align: center;
